--- a/.github/workflows/msbuild.yml
+++ b/.github/workflows/msbuild.yml
@@ -35,4 +35,11 @@ jobs:
       working-directory: ${{env.GITHUB_WORKSPACE}}
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
-      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
+      run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}    
+      
+#     - name: Upload build artifacts
+#       uses: actions/upload-artifact@v2
+#       with:
+#         name: Executable
+#         path: Release/FileRetriever.exe}
+      
